Now that the market history API is fixed, implemented reading it and added functionality to print an hourly report of the market happenings. not working yet.

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,10 +2,10 @@
   "EsiConfig": {
     "EsiUrl": "https://esi.evetech.net/",
     "DataSource": "Tranquility",
-    "UserAgent": "****************",
-    "ClientId": "****************",
-    "SecretKey": "***************",
-    "CallbackUrl": "***************",
+    "UserAgent": "Heydieles Market Bot; Author=Kate M; Email=mckeanke@msu.edu",
+    "ClientId": "b9a58bdbeae240e287e1057d25eed000",
+    "SecretKey": "Wf97jeOiiig2k9ZTT2L9hO47ejDINxBTG4iqPycN",
+    "CallbackUrl": "http://localhost:8080/callback",
     "AuthVersion": "v2"
   }
 }
